fixtures/frontend/milestone-2/valid/bundled-phase-two-stdlib/main.aivi
use aivi.duration (Duration)

use aivi.http (
    HttpError
    Timeout
    DecodeFailure
    RequestFailure
    HttpHeaders
    HttpQuery
    HttpResponse
    DecodeMode
    Strict
    Retry
    HttpSource
)

use aivi.timer (
    TimerTick
    TimerReady
)

use aivi.log (
    LogLevel
    Debug
    Error
    LogContext
    LogEntry
    LogError
    LogSink
)

type User = { id: Int }

value headers : HttpHeaders =
    Map {
        "Authorization": "Bearer demo"
    }

value query : HttpQuery =
    Map {
        "page": "1"
    }

value decodeMode : DecodeMode = Strict

type RetryBudget = Retry

type UsersResponse = (HttpResponse (List User))

type UsersTask = (Task Text (List User))

@source http "https://api.example.com"
signal api : HttpSource

signal users : Signal UsersResponse = api.get "/users"

@source timer.every 120 with {
    immediate: True
}
signal tick : Signal TimerTick

@source timer.after 1000
signal ready : Signal TimerReady

value timeoutError : HttpError = Timeout
value decodeError : HttpError = DecodeFailure "bad-json"
value requestError : HttpError = RequestFailure "offline"
value level : LogLevel = Debug

value context : LogContext =
    Map {
        "module": "fixtures"
    }

value entry : LogEntry = {
    level: level,
    message: "loaded",
    context: context
}

type Writer = LogSink

type CurrentLogTask = (Task LogError Unit)

type CurrentLogError = LogError

type PollDelay = Duration

value errorLevel : LogLevel = Error
